Task 29.3 TaskController Tests