@@ -1,10 +1,13 @@
 package com.crude.tasks.mapper;
 
+
+
 import com.crude.tasks.domain.Task;
 import com.crude.tasks.domain.TaskDto;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TaskMapper {
@@ -28,7 +31,7 @@ public class TaskMapper {
     public List<TaskDto> mapToTaskDtoList(final List<Task> taskList){
         return taskList.stream()
                 .map(this::mapToTaskDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
